Optimized Images for the website.

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
     </div>
     <!-- adding full-width picture for website -->
     <div class="full-width">
-    <img src="slider/slide4.jpg" alt="Adentro de una iglesia">
+    <img src="slider/austin-night-1200.jpg" alt="Adentro de una iglesia">
     </div>
 
     <div class="container" id ="">
