--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('slider/slide-austintexas.jpg');"></div>
+                <div id="slide1"></div>
                 <div class="carousel-caption">
                     <h2>Bienvenidos a la Iglesia Cristiana Verbo</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('slider/slide2.jpg');"></div>
+                <div id="slide2"></div>
                 <div class="carousel-caption">
                     <h2>Welcome to Our Site!</</h2>
                 </div>
