--- a/about.html
+++ b/about.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Quienes Somos? | Iglesia Cristiana Verbo</title>
-
+    <title>Quienes Somos? | Iglesia Verbo Norte - (512) 825-3472 Iglesia Cristiana</title>
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -73,16 +72,14 @@
     <div class="green-background">
       <div class="container">
         <h1>Quienes Somos</h1>
-        <p>Informacion Acerca de la Iglesia VERBO Austin, Tx</p>
+        <p>Iglesia VERBO Norte, Austin, Texas 78757</p>
       </div>
     </div>
     <!-- adding full-width picture for website -->
     <div class="full-width">
     <img src="slider/austin-night-1200.jpg" alt="Adentro de una iglesia">
     </div>
-
     <div class="container" id ="">
-      
       <div class="row">
         <div class="col-lg-12">
 
@@ -92,7 +89,7 @@
               <img class="media-object" src="img/logos/verbo-logo-180x180-black.jpg" alt="VERBO black logo">
             </div><!-- ./media-left media-top -->
             <div class="media-body media-middle">
-              <h3>Iglesia Cristiana Verbo Austin, Texas</h3>
+              <h3>Iglesia Verbo Norte, Austin, Texas</h3>
               <p>La Iglesia Evangelica Nueva Jerusalem somos una Iglesia bendecida con muchos ministerios diversos como: ministerio de mariachi,
         minsterio de alabanza, ministerio de panderero, y ministerio de shofar. Estamos ubicados en Manor Tx, y estamos encargados de la gran
         comission de llevar el evangelio a todos los que nos rodean.</p>
@@ -127,7 +124,7 @@ Todos los miembros de la congregación pueden ser parte de los distintos ministe
         <div class="container">
             <div class="row">
                 <div class="col-sm-2">
-                    <h6>Copyright &copy; 2016 Iglesia Cristiana Verbo Austin Texas</h6>
+                    <h6>Copyright &copy; 2016 Iglesia Verbo Norte, Austin Texas</h6>
                 </div><!-- end col-sm-2 -->
                 <div class="col-sm-4">
                     <h6>QUIENES SOMOS</h6>
