--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Inicio | Iglesia Cristiana Verbo</title>
-
+    <title>Inicio | Iglesia Verbo Norte - (512) 825-3472 Iglesia Cristiana</title>
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -116,7 +115,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-            <h1>Iglesia Cristiana Verbo, Austin, Tx</h1x>
+            <h1>Iglesia Verbo Norte, Austin, Texas</h1x>
             <p class="lead">Que Dios te bendiga y que haga resplandecer tu rostro sobre ti!</p>
             </div>
         </div>
@@ -156,24 +155,18 @@
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3442.3541092638056!2d-97.72888848537204!3d30.369301110108925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644cb9617e5cdb9%3A0x28d6ab215d2fae66!2s8711+Burnet+Rd%2C+Austin%2C+TX+78757!5e0!3m2!1sen!2sus!4v1473084683818" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div><!-- end col-sm-6 -->
                     <div class="col-sm-6">
-                      
-                      <h2>
-                        <strong>Servicios</strong>
-                      </h2>
-                      <hr>
+                      <div class="col-sm-6">
+                      <h2><strong>Servicios</strong><hr></h2>
                       <em>Domingo</em><br>
-                      10:00am - 12:00pm (<em>primer servicio</em>) <br>
+                      10:00am - 10:30am (<em>Oracion</em>)<br>
+                      10:30am - 1:00pm (<em>primer servicio</em>) <br>
                       <br>
                       <em>Miercoles</em><br>
-                      7:00pm - 9:00pm<br><br>
+                      7:00pm - 9:00pm (<em>Estudio Biblico</em>)<br><br>
                       <em>Viernes</em><br>
                       7:00pm - 9:00pm<br><br>
-
                       <em>Lunes, Martes, Jueves, Sabado</em><br>
                       Cerrado<br><br>
-
-                      <?php include('includes/store-hours.php'); ?>
-
                     </div><!-- end col-sm-6 -->
             </div><!-- end class row -->
         </div><!-- end container -->
