Updated some changes and fixed the php contact page error.

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Quienes Somos? | Iglesia Verbo Norte - (512) 825-3472 Iglesia Cristiana</title>
+    <title>Quienes Somos? | Verbo Norte Suite H101 - (512) 825-3472 Iglesia Cristiana</title>
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -72,7 +72,7 @@
     <div class="green-background">
       <div class="container">
         <h1>Quienes Somos</h1>
-        <p>Iglesia VERBO Norte, Austin, Texas 78757</p>
+        <p>Verbo Norte Suite H101, Austin, Texas 78757</p>
       </div>
     </div>
     <!-- adding full-width picture for website -->
@@ -89,7 +89,7 @@
               <img class="media-object" src="img/logos/verbo-logo-180x180-black.jpg" alt="VERBO black logo">
             </div><!-- ./media-left media-top -->
             <div class="media-body media-middle">
-              <h3>Iglesia Verbo Norte, Austin, Texas</h3>
+              <h3>Verbo Norte Suite H101, Austin, Texas 78757</h3>
               <p>La Iglesia Evangelica Nueva Jerusalem somos una Iglesia bendecida con muchos ministerios diversos como: ministerio de mariachi,
         minsterio de alabanza, ministerio de panderero, y ministerio de shofar. Estamos ubicados en Manor Tx, y estamos encargados de la gran
         comission de llevar el evangelio a todos los que nos rodean.</p>
@@ -124,7 +124,7 @@ Todos los miembros de la congregación pueden ser parte de los distintos ministe
         <div class="container">
             <div class="row">
                 <div class="col-sm-2">
-                    <h6>Copyright &copy; 2016 Iglesia Verbo Norte, Austin Texas</h6>
+                    <h6>Copyright &copy; 2016 Verbo Norte Suite H101, Austin Texas</h6>
                 </div><!-- end col-sm-2 -->
                 <div class="col-sm-4">
                     <h6>QUIENES SOMOS</h6>
