--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Inicio | Iglesia Verbo Norte - (512) 825-3472 Iglesia Cristiana</title>
+    <title>Inicio | Verbo Norte Suite H101 - (512) 825-3472 Iglesia Cristiana</title>
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -81,7 +81,7 @@
                 <!-- Set the first background image using inline CSS below. -->
                 <div id="slide1"></div>
                 <div class="carousel-caption">
-                    <h2>Bienvenidos a la Iglesia Cristiana Verbo</h2>
+                    <h2>Bienvenidos a la Iglesia Cristiana Verbo Norte</h2>
                 </div>
             </div>
             <div class="item">
@@ -115,7 +115,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-            <h1>Iglesia Verbo Norte, Austin, Texas</h1x>
+            <h1>Verbo Norte Suite H101, Austin, Texas 78757</h1x>
             <p class="lead">Que Dios te bendiga y que haga resplandecer tu rostro sobre ti!</p>
             </div>
         </div>
@@ -162,9 +162,9 @@
                       10:30am - 1:00pm (<em>primer servicio</em>) <br>
                       <br>
                       <em>Miercoles</em><br>
-                      7:00pm - 9:00pm (<em>Estudio Biblico</em>)<br><br>
+                      8:00pm - 9:00pm (<em>Estudio Biblico</em>)<br><br>
                       <em>Viernes</em><br>
-                      7:00pm - 9:00pm<br><br>
+                      8:00pm - 9:00pm<br><br>
                       <em>Lunes, Martes, Jueves, Sabado</em><br>
                       Cerrado<br><br>
                     </div><!-- end col-sm-6 -->
