Added latest news and mission statement

--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
     </nav>
 
     <!-- Full Page Image Background Carousel Header -->
+    <div class="green-background">
+      <div class="container">
+        <h1>Ultimas Noticias</h1>
+		<p class="lead">Adoracion a Cristo Jesus | Lunes, Octubre 31, 2016</p>
+      </div>
+    </div>
     <header id="myCarousel" class="carousel slide">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -81,7 +87,7 @@
                 <!-- Set the first background image using inline CSS below. -->
                 <div id="slide1"></div>
                 <div class="carousel-caption">
-                    <h2>Bienvenidos a la Iglesia Cristiana Verbo Norte</h2>
+                    <h1>Iglesia Cristiana Verbo Norte</h1>
                 </div>
             </div>
             <div class="item">
@@ -116,7 +122,7 @@
         <div class="row">
             <div class="col-lg-12">
             <h1>Verbo Norte Suite H101, Austin, Texas 78757</h1x>
-            <p class="lead">Que Dios te bendiga y que haga resplandecer tu rostro sobre ti!</p>
+            <p class="lead quote">Que Dios te bendiga y que haga resplandecer tu rostro sobre ti!</p>
             </div>
         </div>
     </div><!-- end container -->
@@ -126,7 +132,13 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2>Bienvenidos</h2>
-                    <p class="lead">Le damos la bienvenida a  la página de la Iglesia Cristiana Verbo of Austin Texas, esperamos que al navegar a través de ella, usted encuentre claridad a las siguientes  preguntas: ¿Qué es la iglesia? ¿Dónde está ubicada? ¿Cómo se inicio? ¿Hacia dónde se dirige? ¿Cuál es su propósito y visión? ¿Cómo lograremos estos propósitos? ¿Cuáles son sus actividades y cómo ser parte de ellas?Nuestra VISION está centrada en una relación intima con Dios, permitiendo que su naturaleza nos gobierne y que su Amor, Santidad, Unidad y Poder se manifiesten en nosotros y se extiendan por medio de nosotros al mundo.Nuestra MISION está en discipular hombres, mujeres, jóvenes y niños que crezcan en el conocimiento de Dios, para que sus vidas sean para su gloria en: Adoración, Discipulado, Compañerismo, Servicio y Evangelismo.  Nuestro énfasis se centra en la relación familiar, la alabanza y las misiones.</p>
+                    <p class="lead">Le damos la bienvenida a  la página de la Iglesia Cristiana Verbo of Austin Texas, esperamos que al navegar a través de ella, usted encuentre claridad a las siguientes  preguntas: ¿Qué es la iglesia? ¿Dónde está ubicada? ¿Cómo se inicio? ¿Hacia dónde se dirige? ¿Cuál es su propósito y visión? ¿Cómo lograremos estos propósitos? ¿Cuáles son sus actividades y cómo ser parte de ellas?</p>
+                    <h3>Mision</h3>
+                    <p class="lead quote">Ver a Austin, Texas convertida en una gran Familia; que exprese el perfecto amor de Dios.</p>
+                    <h3>Vision</h3>
+                    <p class="lead quote">Evangelizar y Discipular a las familias de Austin, Texas hasta que alcanzen la madurez en Cristo; y ejerzan
+                     su ministerio en la iglesia, y su papel en el mundo, de tal manera, que Dios sea glorificado y exaltado.</p>
+                    <h3>Mas Informacion</h3>
                     <p class="lead">Si quieres saber más acerca de la Iglesia Verbo</p>
                     <a href="about.html"><button type="button" class="btn btn-success">Mas Informacion</button></a>
                 </div>
@@ -178,8 +190,8 @@
             <div class="row">
                 <div class="col-lg-12">
                 <h2>Ultimas Noticias</h2>
-                <p class="lead">Oracion Especial el Viernes, Agosto 25, 2016</p>
-                <p class="lead">Culto Especial el Domingo, Agosto 27, 2016</p>
+                <p class="lead">Adoracion a Cristo Jesus, Octubre 31, 2016</p>
+                
                 
                 </div>
             </div>
